# mfe-kube

./: .gitignore  Makefile  README.md  compose.yaml
.github/workflows/: deploy.yml  main-api.yml  main-web.yml  main.yml  reusable-docker.yml
api/: .env.example  Cargo.toml  Dockerfile  compose.yaml
api/.sqlx/: query-30720a322dfb9d2c562251cc832f531bb846a9d39e06a75cd1d120b1a94da96a.json  query-3c78b1f0a9d29b2a9983cf5b930524f4fe64bfa15ecaccad5b3632bf30795976.json  query-42d25a13f0542199b727d75c68cb99d55f36f39d96bf78edf56060e873835936.json  query-77e2ab09c26f93fc10db0558de65f5fec1d780fe2d34ad80778e659d4fd42ece.json  query-9339182398d8e186ed4f24112f576aea80338092db7759a5cef48625757b288a.json  query-b65e90a6d34b87e383d92da2bca95d199a2dc51128e604cbeb6000014312c5ea.json  query-bdd8b83d9b6081815be5520b1e172b41267290b4f5ffdf3304aa4725f0bd59a9.json  query-df77a898b8c31714287a0e93b7b0c736ff398b1aad60a611462171a6e9a89193.json  query-df7c94f34286d29fe83524015c71285c652d0e7243749437fe169e5371d1cc5e.json
api/migrations/: 20230720153951_init.sql  20240612124031_init.sql  20240622013926_set_location_to_nullable.sql  20240622023112_drop_column_location.sql
api/src/: errors.rs  lib.rs  main.rs
api/src/handlers/: add_message.rs  add_person.rs  delete_person.rs  get_all_messages.rs  get_all_persons.rs  health.rs  mod.rs
api/src/models/: message.rs  person.rs
front/: Dockerfile  package.json
front/app/: layout.tsx
infra/: namespaces.yaml
infra/back/: deployment.yaml  secret.yaml  service.yaml
infra/data/: config.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml  volume.yaml
infra/db/: deployment.yaml  namespace.yaml
infra/web/: config.yaml  deployment.yaml  namespace.yaml  service.yaml
web/: .dockerignore  .env.example  .eslintrc.json  .prettierrc.json  Cargo.toml  Dockerfile  app.vue  nuxt.config.ts  package.json  tailwind.config.js
web/assets/: main.css
web/assets/css/: main.css
web/components/: Footer.vue  MessageInput.vue  MessageItem.vue  MessageList.vue
web/pages/: index.vue
web/server/api/: healthz.get.ts  hostname.ts  messages.get.ts  messages.post.ts
web/src/: lib.rs  main.rs  models.rs
web/src/handlers/: mod.rs  pages.rs  rest.rs
web/templates/: base.html  home.html
web/templates/components/: card.html  create-person.html  error.html
web/templates/icons/: error-badge.html  trash.html
