[package]
name = "mfe-api"
version = "3.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
axum-extra = "0.9"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"
validator = { version = "0.18", features = ["derive"] }
