[package]
name = "mfe-api"
version = "5.0.0"
edition = "2021"

[dependencies]
axum = { version = "=0.6.9", features = ["tokio", "json"] }
dotenvy = "0.15"
parking_lot = { version = "=0.12.1", features = ["nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.24.2", default-features = false, features = ["full"] }
tokio-postgres_wasi = "0.7"
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
validator = { version = "0.18", features = ["derive"] }

[patch.crates-io]
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.24.2" }
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" }
libc = { git = "https://github.com/wasix-org/libc.git", branch = "master" }
hyper = { git = "https://github.com/wasix-org/hyper", branch = "v0.14.18" }
parking_lot = {git = "https://github.com/wasix-org/parking_lot.git", branch = "v0.12.1" }
