[package]
name = "mfe-api"
version = "5.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["tokio", "json"] }
dotenvy = "0.15"
mysql_wasi = "23.0"
parking_lot = { version = "=0.12.1", features = ["nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
validator = { version = "0.18", features = ["derive"] }

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
